<resources>
    <string name="app_name">SVARA</string>
    <string name="facebook_app_id">221190024918319</string>
    <string name="fb_login_protocol_scheme">fb221190024918319</string>
    <string name="server_client_id">341930179672-tl3s8hufoqqs66as3kvme7pp0eja180n.apps.googleusercontent.com</string>
    <string name="patch_version">0.0.1</string>
    <string name="notify_channel_id" translatable="false">svara.channel.id</string>
    <string name="notify_channel_name" translatable="false">@string/app_name</string>
    <string name="notify_channel_description" translatable="false">Svara information</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="toast_logout">Logged Out</string>
    <string name="ad_mob_id">ca-app-pub-7947634504633481~4248643416</string>
    <string name="ad_mob_unit_curation">ca-app-pub-7947634504633481/9775290501</string>
    <string name="ad_mob_unit_player">ca-app-pub-7947634504633481/1560692909</string>
    <string name="ad_mob_unit_player_radio">ca-app-pub-7947634504633481/3967310495</string>
    <string name="ad_mob_unit_queue">ca-app-pub-7947634504633481/5719429769</string>
    <string name="ad_mob_unit_library">ca-app-pub-7947634504633481/1644399487</string>
    <string name="ad_mob_unit_radio_page">ca-app-pub-7947634504633481/5855107237</string>
    <string name="network_failure">Failed to connect to server</string>
    <string name="activity_login_login">Login</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="activity_login_email">Email / Username</string>
    <string name="activity_login_password">Password</string>
    <string name="signup_firstname">First Name</string>
    <string name="signup_lastname">Last Name</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_username">Choose Username</string>
    <string name="signup_birthday">Birthday</string>
    <string name="signup">Sign Up</string>
    <string name="fragment_phone_title">Enter your phone number</string>
    <string name="fragment_phone_login_phone">Phone Number</string>
    <string name="fragment_phone_next">Next</string>
    <string name="fragment_phone_verify_title">Enter your code</string>
    <string name="fragment_phone_code">Code</string>
    <string name="fragment_phone_continue">Continue</string>
    <string name="fragment_playlist_title">PLAYLIST</string>
    <string name="fragment_single_feed_title">FEED</string>
    <string name="fragment_discover_title">DISCOVER</string>
    <string name="fragment_discover_society">SOCIETY</string>
    <string name="fragment_discover_music">MUSIC</string>
    <string name="fragment_discover_album">ALBUM</string>
    <string name="fragment_discover_playlist">PLAYLIST</string>
    <string name="fragment_hits_title">MUSIC</string>
    <string name="fragment_hits_new_release">New Release</string>
    <string name="fragment_hits_album">Album</string>
    <string name="fragment_hits_song">Song</string>
    <string name="fragment_hits_new_playlist">HOT PLAYLIST</string>
    <string name="fragment_hits_featured_ceo_playlist">Featured CEO Playlist</string>
    <string name="fragment_hits_genere">GENRE</string>
    <string name="your_favorites">Your Favorites</string>
    <string name="fragment_curation_see_all">see more</string>
    <string name="fragment_radio_title">RADIO</string>
    <string name="fragment_radio_on_air">ON AIR</string>
    <string name="fragment_radio_local">LOCAL</string>
    <string name="fragment_radio_featured_channel">FEATURED CHANNEL</string>
    <string name="fragment_radio_strip">-</string>
    <string name="fragment_library_title">LIBRARY</string>
    <string name="fragment_library_music">MUSIC</string>
    <string name="fragment_library_artist">ARTIST</string>
    <string name="fragment_library_album">ALBUM</string>
    <string name="fragment_library_genre">GENRE</string>
    <string name="fragment_library_playlist">PLAYLIST </string>
    <string name="fragment_library_radio">RADIO</string>
    <string name="fragment_library_radio_content">RADIO CONTENT</string>
    <string name="fragment_library_upload">UPLOAD</string>
    <string name="fragment_library_podcast">PODCAST</string>
    <string name="fragment_library_series">SERIES</string>
    <string name="fragment_library_program">PROGRAM</string>
    <string name="fragment_library_video">VIDEO</string>
    <string name="fragment_library_search">SEARCH</string>
    <string name="fragment_library_private_doc">Private Doc</string>
    <string name="fragment_library_new_playlist">Create New</string>
    <string name="fragment_upload_title">UPLOAD</string>
    <string name="fragment_upload_uploading">Uploading song and album. Please wait.</string>
    <string name="fragment_upload_choose_song">Choose Podcast</string>
    <string name="fragment_upload_change_song">Change Podcast</string>
    <string name="fragment_upload_choose_your_podcast">Choose your Podcast</string>
    <string name="fragment_upload_choose_picture">Choose</string>
    <string name="fragment_upload_title_hint">Type your title</string>
    <string name="fragment_upload_caption_hint">Type your caption</string>
    <string name="fragment_upload_error_image">Failed to upload picture</string>
    <string name="fragment_upload_error_audio">Failed to upload audio</string>
    <string name="fragment_upload_error_upload">Failed to post this upload</string>
    <string name="fragment_upload_success">Successfully created upload</string>
    <string name="fragment_upload_public">Public</string>
    <string name="fragment_upload_private">Private</string>
    <string name="fragment_upload_share">Share</string>
    <string name="fragment_upload_facebook">Facebook</string>
    <string name="fragment_upload_twitter">Twitter</string>
    <string name="fragment_upload_path">Path</string>
    <string name="fragment_upload_google_plus">Google+</string>
    <string name="fragment_upload_others">Others</string>
    <string name="fragment_user_profile_timeline">Timeline</string>
    <string name="fragment_user_profile_playlist">Playlist</string>
    <string name="fragment_user_profile_article">Article</string>
    <string name="fragment_user_profile_history">History</string>
    <string name="fragment_user_profile_upload">Uploads</string>
    <string name="fragment_user_profile_document">Document</string>
    <string name="fragment_user_profile_message">Message</string>
    <string name="fragment_user_profile_follow">  Follow  </string>
    <string name="fragment_user_profile_unfollow">Unfollow</string>
    <string name="fragment_user_profile_setting">Edit Profile</string>
    <string name="fragment_user_profile_followings">Following\n%1$s</string>
    <string name="fragment_user_profile_followers">Followers\n%1$s</string>
    <string name="fragment_user_profile_update_cover_success">Successfully update cover picture</string>
    <string name="fragment_user_profile_update_cover_failed">Failed to update cover picture</string>
    <string name="fragment_user_profile_option_view_cover">View cover picture</string>
    <string name="fragment_user_profile_option_change_cover">Change cover picture</string>
    <string name="fragment_user_profile_option_reset_cover">Reset cover picture</string>
    <string name="fragment_user_profile_reset_cover_success">Successfully reset cover picture</string>
    <string name="fragment_user_profile_reset_cover_failed">Failed to update cover picture</string>
    <string name="fragment_radio_profile_on_air">ON AIR</string>
    <string name="fragment_radio_profile_phone">PHONE</string>
    <string name="fragment_radio_profile_fax">FAX</string>
    <string name="fragment_radio_profile_website">WEBSITE</string>
    <string name="fragment_radio_profile_youtube">YOUTUBE</string>
    <string name="fragment_radio_profile_facebook">FACEBOOK</string>
    <string name="fragment_radio_profile_instagram">INSTAGRAM</string>
    <string name="fragment_radio_profile_twitter">TWITTER</string>
    <string name="fragment_radio_profile_shows">SHOWS</string>
    <string name="fragment_radio_profile_featured_host">FEATURED HOST</string>
    <string name="fragment_radio_profile_contents">ALL PODCAST</string>
    <string name="fragment_radio_profile_no_information">No information available</string>
    <string name="fragment_radio_profile_get_in_touch">GET IN TOUCH WITH US ON</string>
    <string name="fragment_social_title">SOCIAL</string>
    <string name="fragment_social_create_new_post">Create New Post</string>
    <string name="adapter_social_music">Music</string>
    <string name="adapter_social_artist">Artist</string>
    <string name="adapter_social_album">Album</string>
    <string name="adapter_social_playlist">Playlist</string>
    <string name="adapter_social_radio">Radio</string>
    <string name="adapter_social_radio_content">Radio Content</string>
    <string name="adapter_social_upload">Upload</string>
    <string name="fragment_post_title">POST</string>
    <string name="fragment_post_author"><![CDATA[by <font color="#41ABDE">Text</font>]]></string>
    <string name="fragment_post_add_song">Add Content</string>
    <string name="fragment_post_caption_hint">Type your caption</string>
    <string name="fragment_post_public">Public</string>
    <string name="fragment_post_follower">Follower</string>
    <string name="fragment_post_private">Private</string>
    <string name="fragment_post_share">SHARE</string>
    <string name="fragment_post_facebook">Facebook</string>
    <string name="fragment_post_twitter">Twitter</string>
    <string name="fragment_post_path">Path</string>
    <string name="fragment_post_google_plus">Google+</string>
    <string name="fragment_post_others">Others</string>
    <string name="fragment_notification_title">ACTIVITIES</string>
    <string name="fragment_activities_title">NOTIFICATION</string>
    <string name="fragment_activities_reply">Reply</string>
    <string name="fragment_direct_message">MESSAGE</string>
    <string name="fragment_likes_title">LIKES</string>
    <string name="fragment_comment_title">COMMENTS</string>
    <string name="fragment_comment_add_hint">Enter your comment here</string>
    <string name="fragment_edit_comment_hint">Enter new comment or press x to cancel</string>
    <string name="fragment_search_result_title">SEARCH</string>
    <string name="fragment_search_history_title">HISTORY</string>
    <string name="fragment_search_result_music">Tracks</string>
    <string name="fragment_search_result_artist">Artist</string>
    <string name="cover">cover</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="register_username">Username</string>
    <string name="inter_skip">Skip</string>
    <string name="inter_agreement_term_of_service">I agree to Term of Service and Privacy Policy.</string>
    <string name="inter_phone_number">Phone number</string>
    <string name="inter_user_setting_first_name_label">First Name</string>
    <string name="inter_user_setting_first_name_hint">first name</string>
    <string name="inter_user_setting_last_name_label">Last Name</string>
    <string name="inter_user_setting_last_name_hint">last name</string>
    <string name="inter_user_setting_gender">Gender</string>
    <string name="inter_user_setting_male">Male</string>
    <string name="inter_user_setting_female">Female</string>
    <string name="inter_user_setting_birthday">Birthday</string>
    <string name="inter_sign_in_phone">Sign In With Phone Number</string>
    <string name="inter_sign_with">Sign In With</string>
    <string name="inter_complete_profile">Complete Profile</string>
    <string name="inter_about">About</string>
    <string name="inter_let_s_go">Let\'s Go!</string>
</resources>