<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">
    <com.zamrud.radio.mobile.app.svara.view.LetterSpacingTextView
        android:id="@+id/lblTitle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/status_bar_height"
        style="@style/TextAppearance.AppTheme.Title"
        android:background="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black_75"
        android:text="@string/inter_complete_profile"/>
    <TextView
        android:id="@+id/btnSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/lblTitle"
        app:layout_constraintBottom_toBottomOf="@+id/lblTitle"
        app:layout_constraintRight_toRightOf="@+id/lblTitle"
        android:padding="8dp"
        android:layout_marginRight="4dp"
        android:background="?attr/selectableItemBackground"
        android:textColor="?attr/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:textSize="12sp"
        android:text="@string/inter_skip"
        tools:ignore="RtlHardcoded" />
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        app:layout_constraintTop_toBottomOf="@+id/lblTitle"
        android:background="@drawable/bottom_shadow"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgProfile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/lblTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginLeft="135dp"
        android:layout_marginRight="135dp"
        android:layout_marginTop="25dp"
        android:src="#E7E7E7"/>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="@+id/imgProfile"
        app:layout_constraintBottom_toBottomOf="@+id/imgProfile"
        app:layout_constraintLeft_toLeftOf="@+id/imgProfile"
        app:layout_constraintRight_toRightOf="@+id/imgProfile"
        android:tintMode="src_in"
        android:tint="?attr/colorPrimary"
        android:src="@drawable/ic_photo_camera"
        tools:ignore="UnusedAttribute"
        android:contentDescription="@string/cover" />
    <TextView
        android:id="@+id/lblUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imgProfile"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="16dp"
        android:text="@string/register_username"
        android:textStyle="bold"
        android:textSize="12sp"
        android:visibility="gone"
        tools:ignore="RtlHardcoded" />
    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lblUsername"
        android:background="@drawable/background_edit_text_register"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textColor="@color/black_75"
        android:hint="@string/register_username"
        android:inputType="text"
        android:visibility="gone"
        android:textSize="12sp"/>
    <TextView
        android:id="@+id/lblFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="16dp"
        android:text="@string/inter_user_setting_first_name_label"
        android:textStyle="bold"
        android:textSize="12sp"
        tools:ignore="RtlHardcoded" />
    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lblFirstName"
        android:background="@drawable/background_edit_text_register"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textColor="@color/black_75"
        android:hint="@string/inter_user_setting_first_name_hint"
        android:inputType="text"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/lblLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/inter_user_setting_last_name_label"
        android:textStyle="bold"
        android:textSize="12sp"
        tools:ignore="RtlHardcoded" />
    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lblLastName"
        android:background="@drawable/background_edit_text_register"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textColor="@color/black_75"
        android:hint="@string/inter_user_setting_last_name_hint"
        android:inputType="text"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/lblAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etLastName"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/inter_about"
        android:textStyle="bold"
        android:textSize="12sp"
        tools:ignore="RtlHardcoded" />
    <EditText
        android:id="@+id/etAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lblAbout"
        android:background="@drawable/background_edit_text_register"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textColor="@color/black_75"
        android:hint="@string/inter_about"
        android:inputType="text"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/lblBirthDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etAbout"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/inter_user_setting_birthday"
        android:textStyle="bold"
        android:textSize="12sp"
        tools:ignore="RtlHardcoded" />
    <EditText
        android:id="@+id/etBirthDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lblBirthDay"
        android:background="@drawable/background_edit_text_register"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textColor="@color/black_75"
        android:hint="@string/inter_user_setting_birthday"
        android:textSize="12sp"
        android:inputType="date" />

    <TextView
        android:id="@+id/lblGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etBirthDay"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/inter_user_setting_gender"
        android:textStyle="bold"
        android:textSize="12sp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/btnMale"
        android:layout_width="80dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@+id/lblGender"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:textColor="@color/black_75"
        android:background="@drawable/button_gender_transition"
        android:text="@string/inter_user_setting_male"/>

    <TextView
        android:id="@+id/btnFemale"
        android:layout_width="80dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@+id/lblGender"
        app:layout_constraintLeft_toRightOf="@+id/btnMale"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:textColor="@color/black_75"
        android:background="@drawable/button_gender_transition"
        android:text="@string/inter_user_setting_female"/>

    <Button
        android:id="@+id/btnGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnFemale"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/inter_let_s_go"
        android:textColor="@color/white"
        android:background="@drawable/button_login"
        android:clickable="true"
        android:focusable="true"
        android:elevation="8dp"
        android:translationZ="4dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        tools:ignore="UnusedAttribute" />


</androidx.constraintlayout.widget.ConstraintLayout>