<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:contentDescription="@string/cover"
        android:src="@drawable/logo_on_login"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvSignUp"/>

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inter_sign_in_phone"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="46dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <LinearLayout
        android:id="@+id/btnPhone"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_rounded_login"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingEnd="32dp"
        android:paddingStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignUp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_phone_login"
            android:layout_marginEnd="8dp"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inter_phone_number"
            android:textSize="18sp"
            android:textColor="@color/black" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvLoginWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inter_sign_with"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/btnPhone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:id="@+id/btnGoogle"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_rounded_login"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/btnFacebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginWith"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginRight="4dp"
            android:src="@drawable/googleg_standard_color_18" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google"
            android:textSize="12dp"
            tools:ignore="SpUsage" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/btnFacebook"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border_rounded_login"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnGoogle"
        app:layout_constraintTop_toTopOf="@+id/btnGoogle"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginRight="4dp"
            android:src="@drawable/fb" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            android:textSize="12dp"
            android:textColor="@color/black"
            tools:ignore="SpUsage" />
    </LinearLayout>
    <CheckBox
        android:id="@+id/checkTerm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/term"
        app:layout_constraintBottom_toBottomOf="@+id/term"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/term"
        android:layout_marginStart="32dp"/>

    <TextView
        android:id="@+id/term"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="start"
        android:padding="12dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/inter_agreement_term_of_service"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/btnFacebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkTerm"/>

    <TextView
        android:id="@+id/btnSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/status_bar_height"
        android:layout_marginRight="8dp"
        android:background="?attr/selectableItemBackground"
        android:padding="8dp"
        android:text="@string/inter_skip"
        android:textColor="@color/black_75"
        android:textSize="12sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />
</androidx.constraintlayout.widget.ConstraintLayout>